# adnetwork

./: README.md  TechnicalWriteup.md  paris.txt
ad-portal/: Readme.md  Readme.txt
ad-portal/backend/: package-lock.json  package.json  server.js
recommender-ai/: ABI.json  README.md  Readme.txt  ads.py  ai.py  bytecode.txt  env.py  generate_key.py  pyproject.toml  serve.py  w3b.py
xmtp-anonymizer/: .env  README.md  Readme.txt  create_wallet.js  generate_mnemonic.js  package.json  relay.js
zk-ads/: .gitignore  Readme.md  Readme.txt  package.json  truffle-config.js
zk-ads/client/: package-lock.json  package.json
zk-ads/client/public/: index.html
zk-ads/client/scripts/: deploy.sh
zk-ads/client/src/: App.js  index.js
zk-ads/client/src/components/: AdCard.js  AdCardImage.js  AdCardItem.js  AdCardVote.js  AdDialog.js  AdDisplay.js  AdSnackbar.js  AdsList.js  AdsUpload.js  Navbar.js  RobotAd.js  polyfills.js
zk-ads/client/src/contracts/: AdInteractionAggregator.json  Migrations.json
zk-ads/client/src/helpers/: ABI.json  Ethereum.js  Metamask.js  MetamaskAuthProvider.js  MetamaskInfo.js  WorldcoinAuthProvider.js  config.js  ipfs.js  xmtp.js
zk-ads/client/src/routes/: Dashboard.js  Login.js
zk-ads/contracts/: AdInteractionAggregator.sol  ZAP.sol
zk-ads/migrations/: 2_ad_aggs.js
zk-ads/tools/: show_address.js
