[tool.poetry]
name = "recommender-ai"
version = "0.1.0"
description = ""
authors = ["Jason Sun <sunapi386@gmail.com>"]
readme = "README.md"
packages = [{include = "recommender_ai"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
